test : 폴더 요약 테스트 코드 추가