@@ -1,13 +1,11 @@
 package com.c4cometrue.mystorage.filedeletionlog;
 
-import java.util.List;
-import java.util.stream.Collectors;
 
 import com.c4cometrue.mystorage.file.FileMetadata;
-
+import java.util.List;
 import lombok.RequiredArgsConstructor;
-
 import org.springframework.stereotype.Service;
+
 
 @Service
 @RequiredArgsConstructor
@@ -16,13 +14,13 @@ public class FileDeletionLogService {
 
     public void saveFileDeleteLog(List<FileMetadata> files) {
         List<FileDeletionLog> logs = files.stream()
-                .map(file -> FileDeletionLog.builder()
-                        .originalFileName(file.getOriginalFileName())
-                        .filePath(file.getFilePath())
-                        .deleterId(file.getUploaderId())
-                        .sizeInBytes(file.getSizeInBytes())
-                        .build())
-                .collect(Collectors.toList());
+            .map(file -> FileDeletionLog.builder()
+                .originalFileName(file.getOriginalFileName())
+                .filePath(file.getFilePath())
+                .deleterId(file.getUploaderId())
+                .sizeInBytes(file.getSizeInBytes())
+                .build())
+            .toList();
 
         fileDeletionLogRepository.saveAll(logs);
     }
